Stylesheet created, not working yet.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,8 @@
 <html>
     <head>
-        <title>
-            To-do
-        </title>
-        <link href="/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/app.css')}}">
+        
+        <title>To-do</title>
     </head>
     <body>
         <h1>
