Still stuck on last part, but CSS is done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,36 +1,38 @@
 <html>
     <head>
-        <link rel="stylesheet" href="{{url_for('static',filename='css/app.css')}}">
+        <link rel="stylesheet" href="css/styles.css">
         
         <title>To-do</title>
     </head>
     <body>
-        <h1>
-            My To-do list
-        </h1>
-        <form action="/addToDo" method="POST">
-            <input type="text" name="newtodo" placeholder="add new item">
-            <button type="submit">
-                Add To-do
-            </button>
-            <h2>
-                Current tasks
-            </h2>
-            <% for( var i=0; i< tasks.length; i++){ %>
-                <li><input type="checkbox" name="check" value="<%= tasks[i]._id %>" /><%= tasks[i].item %></li>
-            <% } %>
-            <button formaction="/removeToDo" type="submit">
-                Remove
-            </button>
-        </form>
-        <form action="/deleteToDo" method="POST">
-            <h2>
-                Completed Tasks
-            </h2>
-            <% for( var i=0; i<completed.length; i++){ %>
-                <li><input type="checkbox" name="deletetask" value="<%= completed[i]._id %>" /><%= completed[i].item %></li>
-            <% } %>
-            <button formaction="/deleteToDo" type="submit">Delete</button>
-        </form>
+        <div class="form-container">
+            <h1>
+                My To-do list
+            </h1>
+            <form action="/addToDo" method="POST">
+                <input type="text" name="newtodo" placeholder="add new item">
+                <button type="submit">
+                    Add To-do
+                </button>
+                <h2>
+                    Current tasks
+                </h2>
+                <% for( var i=0; i< tasks.length; i++){ %>
+                    <li><input type="checkbox" name="check" value="<%= tasks[i]._id %>" /><%= tasks[i].item %></li>
+                <% } %>
+                <button formaction="/removeToDo" type="submit">
+                    Remove
+                </button>
+            </form>
+            <form action="/deleteToDo" method="POST">
+                <h2>
+                    Completed Tasks
+                </h2>
+                <% for( var i=0; i<completed.length; i++){ %>
+                    <li><input type="checkbox" name="deletetask" value="<%= completed[i]._id %>" /><%= completed[i].item %></li>
+                <% } %>
+                <button formaction="/deleteToDo" type="submit">Delete</button>
+            </form>
+        </div>
     </body>
 </html>
