--- a/views/zip.ejs
+++ b/views/zip.ejs
@@ -1,26 +1,32 @@
 <html>
     <head>
-        <link rel="stylesheet" href="{{url_for('static',filename='css/app.css')}}">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Zip Form</title>
     </head>
     <body>
-        <h1>
-            Select a country and enter a zip code
-        </h1>
-        <form>
-            <label for="country">Choose a country:</label>
-            <select id="country" name="country">
-            <option value="us">US</option>
-            <option value="uk">UK</option>
-            <option value="france">France</option>
-            <option value="spain">Spain</option>
-            <option value="mexico">Mexico</option>
-            <option value="canada">Canada</option>
-            <option value="poland">Poland</option>
-            <option value="belgium">Belgium</option>
-            <option value="brazil">Brazil</option>
-            <option value="chile">Chile</option>
-            </select>
-        </form>
+        <div class="form-container">
+            <h1>
+                Select a country and enter a zip code
+            </h1>
+            <form action="/selectZip" method="POST">
+                <label for="country">Choose a country:</label>
+                <select id="country" name="country" required>
+                <option value="us">US</option>
+                <option value="bulgaria">Bulgaria</option>
+                <option value="france">France</option>
+                <option value="spain">Spain</option>
+                <option value="mexico">Mexico</option>
+                <option value="holland">Holland</option>
+                <option value="pakistan">Pakistan</option>
+                <option value="belgium">Belgium</option>
+                <option value="norway">Norway</option>
+                <option value="india">India</option>
+                </select>
+                <label for="zip">Zip Code: </label>
+                <input id="zip"type="number" required>
+                <button type="submit">Submit</button>
+            </form>
+            
+        </div>
     </body>
 </html>
